Reduction of .css Files & Adjustment of Dependencies
Deleted from /css:

- Avalance.css
- cmxform.css
- estilo.css
- estilo1.css
- estilos_notas1.css
- estiosCampos.css
- EstilosChosen.css
- general.css
- jqtooltip.css
- mainModificado.css
- popup.css

Created styles.css that includes code from:

1. general.css
2. mainModificado.css
3. turquoise.css
4. cmxform.css

Finally adjusted hrefs of PanelControl.php & login_form.php to implement use of styles.css

* Also fixed composer.json *

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "phpoffice/phpspreadsheet": "^1.29",
-        "sonata-project/google-authenticator": "^2.3"
+        "google-authenticator": "^2.3"
     }
 }
